--- a/efk/kibana.yaml
+++ b/efk/kibana.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: kibana
   namespace: logging
@@ -9,11 +9,12 @@ spec:
   selector:
     app: kibana
   ports:
-    - port: 5601
+    - port: 80
+      targetPort: http
 
 ---
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
   name: kibana
   namespace: logging
@@ -41,4 +42,5 @@ spec:
             - name: ELASTICSEARCH_URL
               value: http://elasticsearch:9200
           ports:
-            - containerPort: 5601
+            - name: http
+              containerPort: 5601
