--- a/observability/jaeger.yaml
+++ b/observability/jaeger.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   strategy: allInOne
   allInOne:
-    image: jaegertracing/all-in-one:latest
+    image: jaegertracing/all-in-one:1.17.0
     options:
       log-level: info
   storage:
