Add support for Jaeger

--- a/projectcontour/jaeger-httpproxy.yaml
+++ b/projectcontour/jaeger-httpproxy.yaml
@@ -9,4 +9,4 @@ spec:
     fqdn: jaeger.ephemeral-roles.net
   includes:
     - name: jaeger-httpproxy
-      namespace: observability
+      namespace: ephemeral-roles
