--- a/monitoring/manifests/alertmanager-alertmanager.yaml
+++ b/monitoring/manifests/alertmanager-alertmanager.yaml
@@ -20,7 +20,7 @@ spec:
           - monitoring
           topologyKey: kubernetes.io/hostname
         weight: 100
-  image: quay.io/prometheus/alertmanager:v0.21.0
+  baseImage: quay.io/prometheus/alertmanager
   nodeSelector:
     kubernetes.io/os: linux
   replicas: 3
@@ -29,4 +29,4 @@ spec:
     runAsNonRoot: true
     runAsUser: 1000
   serviceAccountName: alertmanager-main
-  version: v0.21.0
+  version: v0.18.0
