--- a/monitoring/manifests/kube-state-metrics-roleBinding.yaml
+++ b/monitoring/manifests/kube-state-metrics-roleBinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: kube-state-metrics
+  namespace: monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: kube-state-metrics
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: monitoring
