--- a/monitoring/manifests/kube-state-metrics-service.yaml
+++ b/monitoring/manifests/kube-state-metrics-service.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: v1.9.7
+    k8s-app: kube-state-metrics
   name: kube-state-metrics
   namespace: monitoring
 spec:
@@ -16,4 +15,4 @@ spec:
     port: 9443
     targetPort: https-self
   selector:
-    app.kubernetes.io/name: kube-state-metrics
+    app: kube-state-metrics
