--- a/monitoring/manifests/kube-state-metrics-serviceMonitor.yaml
+++ b/monitoring/manifests/kube-state-metrics-serviceMonitor.yaml
@@ -2,8 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: 1.9.7
+    k8s-app: kube-state-metrics
   name: kube-state-metrics
   namespace: monitoring
 spec:
@@ -25,7 +24,7 @@ spec:
     scheme: https
     tlsConfig:
       insecureSkipVerify: true
-  jobLabel: app.kubernetes.io/name
+  jobLabel: k8s-app
   selector:
     matchLabels:
-      app.kubernetes.io/name: kube-state-metrics
+      k8s-app: kube-state-metrics
