--- a/monitoring/manifests/node-exporter-daemonset.yaml
+++ b/monitoring/manifests/node-exporter-daemonset.yaml
@@ -2,19 +2,17 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   labels:
-    app.kubernetes.io/name: node-exporter
-    app.kubernetes.io/version: v1.0.1
+    app: node-exporter
   name: node-exporter
   namespace: monitoring
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: node-exporter
+      app: node-exporter
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: node-exporter
-        app.kubernetes.io/version: v1.0.1
+        app: node-exporter
     spec:
       containers:
       - args:
@@ -24,8 +22,9 @@ spec:
         - --path.rootfs=/host/root
         - --no-collector.wifi
         - --no-collector.hwmon
-        - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
-        image: quay.io/prometheus/node-exporter:v1.0.1
+        - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
+        - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
+        image: quay.io/prometheus/node-exporter:v0.18.1
         name: node-exporter
         resources:
           limits:
@@ -36,13 +35,11 @@ spec:
             memory: 180Mi
         volumeMounts:
         - mountPath: /host/proc
-          mountPropagation: HostToContainer
           name: proc
-          readOnly: true
+          readOnly: false
         - mountPath: /host/sys
-          mountPropagation: HostToContainer
           name: sys
-          readOnly: true
+          readOnly: false
         - mountPath: /host/root
           mountPropagation: HostToContainer
           name: root
@@ -50,14 +47,14 @@ spec:
       - args:
         - --logtostderr
         - --secure-listen-address=[$(IP)]:9100
-        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:9100/
         env:
         - name: IP
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: quay.io/brancz/kube-rbac-proxy:v0.8.0
+        image: quay.io/coreos/kube-rbac-proxy:v0.4.1
         name: kube-rbac-proxy
         ports:
         - containerPort: 9100
@@ -90,6 +87,3 @@ spec:
       - hostPath:
           path: /
         name: root
-  updateStrategy:
-    rollingUpdate:
-      maxUnavailable: 10%
