--- a/monitoring/manifests/prometheus-serviceMonitorApiserver.yaml
+++ b/monitoring/manifests/prometheus-serviceMonitorApiserver.yaml
@@ -43,7 +43,7 @@ spec:
       sourceLabels:
       - __name__
     - action: drop
-      regex: etcd_(debugging|disk|server).*
+      regex: etcd_(debugging|disk|request|server).*
       sourceLabels:
       - __name__
     - action: drop
