--- a/monitoring/manifests/prometheus-serviceMonitorKubeControllerManager.yaml
+++ b/monitoring/manifests/prometheus-serviceMonitorKubeControllerManager.yaml
@@ -7,8 +7,7 @@ metadata:
   namespace: monitoring
 spec:
   endpoints:
-  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    interval: 30s
+  - interval: 30s
     metricRelabelings:
     - action: drop
       regex: kubelet_(pod_worker_latency_microseconds|pod_start_latency_microseconds|cgroup_manager_latency_microseconds|pod_worker_start_latency_microseconds|pleg_relist_latency_microseconds|pleg_relist_interval_microseconds|runtime_operations|runtime_operations_latency_microseconds|runtime_operations_errors|eviction_stats_age_microseconds|device_plugin_registration_count|device_plugin_alloc_latency_microseconds|network_plugin_operations_latency_microseconds)
@@ -46,10 +45,7 @@ spec:
       regex: etcd_(debugging|disk|request|server).*
       sourceLabels:
       - __name__
-    port: https-metrics
-    scheme: https
-    tlsConfig:
-      insecureSkipVerify: true
+    port: http-metrics
   jobLabel: k8s-app
   namespaceSelector:
     matchNames:
