--- a/monitoring/manifests/prometheus-serviceMonitorKubeScheduler.yaml
+++ b/monitoring/manifests/prometheus-serviceMonitorKubeScheduler.yaml
@@ -7,12 +7,8 @@ metadata:
   namespace: monitoring
 spec:
   endpoints:
-  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    interval: 30s
-    port: https-metrics
-    scheme: https
-    tlsConfig:
-      insecureSkipVerify: true
+  - interval: 30s
+    port: http-metrics
   jobLabel: k8s-app
   namespaceSelector:
     matchNames:
