--- a/monitoring/manifests/setup/prometheus-operator-service.yaml
+++ b/monitoring/manifests/setup/prometheus-operator-service.yaml
@@ -4,15 +4,15 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: v0.43.2
+    app.kubernetes.io/version: v0.35.1
   name: prometheus-operator
   namespace: monitoring
 spec:
   clusterIP: None
   ports:
-  - name: https
-    port: 8443
-    targetPort: https
+  - name: http
+    port: 8080
+    targetPort: http
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
