--- a/monitoring/manifests/prometheus-adapter-deployment.yaml
+++ b/monitoring/manifests/prometheus-adapter-deployment.yaml
@@ -23,9 +23,9 @@ spec:
         - --config=/etc/adapter/config.yaml
         - --logtostderr=true
         - --metrics-relist-interval=1m
-        - --prometheus-url=http://prometheus-k8s.monitoring.svc:9090/
+        - --prometheus-url=http://prometheus-k8s.monitoring.svc.cluster.local:9090/
         - --secure-port=6443
-        image: quay.io/coreos/k8s-prometheus-adapter-amd64:v0.5.0
+        image: directxman12/k8s-prometheus-adapter:v0.7.0
         name: prometheus-adapter
         ports:
         - containerPort: 6443
