--- a/monitoring/manifests/kube-state-metrics-clusterRole.yaml
+++ b/monitoring/manifests/kube-state-metrics-clusterRole.yaml
@@ -1,6 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: v1.9.5
   name: kube-state-metrics
 rules:
 - apiGroups:
@@ -93,8 +96,8 @@ rules:
 - apiGroups:
   - admissionregistration.k8s.io
   resources:
-  - validatingwebhookconfigurations
   - mutatingwebhookconfigurations
+  - validatingwebhookconfigurations
   verbs:
   - list
   - watch
