--- a/monitoring/manifests/kube-state-metrics-clusterRoleBinding.yaml
+++ b/monitoring/manifests/kube-state-metrics-clusterRoleBinding.yaml
@@ -1,6 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  labels:
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: v1.9.5
   name: kube-state-metrics
 roleRef:
   apiGroup: rbac.authorization.k8s.io
