--- a/monitoring/manifests/kube-state-metrics-service.yaml
+++ b/monitoring/manifests/kube-state-metrics-service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    k8s-app: kube-state-metrics
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: v1.9.5
   name: kube-state-metrics
   namespace: monitoring
 spec:
@@ -15,4 +16,4 @@ spec:
     port: 9443
     targetPort: https-self
   selector:
-    app: kube-state-metrics
+    app.kubernetes.io/name: kube-state-metrics
