--- a/monitoring/manifests/kube-state-metrics-serviceAccount.yaml
+++ b/monitoring/manifests/kube-state-metrics-serviceAccount.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  labels:
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: v1.9.5
   name: kube-state-metrics
   namespace: monitoring
