--- a/monitoring/manifests/prometheus-operator-serviceMonitor.yaml
+++ b/monitoring/manifests/prometheus-operator-serviceMonitor.yaml
@@ -4,15 +4,19 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: v0.35.1
+    app.kubernetes.io/version: v0.43.2
   name: prometheus-operator
   namespace: monitoring
 spec:
   endpoints:
-  - honorLabels: true
-    port: http
+  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    honorLabels: true
+    port: https
+    scheme: https
+    tlsConfig:
+      insecureSkipVerify: true
   selector:
     matchLabels:
       app.kubernetes.io/component: controller
       app.kubernetes.io/name: prometheus-operator
-      app.kubernetes.io/version: v0.35.1
+      app.kubernetes.io/version: v0.43.2
