Update logging linkerd configuration

--- a/logging/fluentd.yaml
+++ b/logging/fluentd.yaml
@@ -54,16 +54,17 @@ spec:
     metadata:
       labels:
         app: fluentd
+      annotations:
+        linkerd.io/inject: enabled
     spec:
-      serviceAccount: fluentd
       serviceAccountName: fluentd
       containers:
         - name: fluentd
           image: fluent/fluentd-kubernetes-daemonset:v1.4.2-debian-elasticsearch-1.1
           env:
-            - name:  FLUENT_ELASTICSEARCH_HOST
+            - name: FLUENT_ELASTICSEARCH_HOST
               value: "elasticsearch.logging.svc.cluster.local"
-            - name:  FLUENT_ELASTICSEARCH_PORT
+            - name: FLUENT_ELASTICSEARCH_PORT
               value: "9200"
             - name: FLUENT_ELASTICSEARCH_SCHEME
               value: "http"
