--- a/logging/elasticsearch.yaml
+++ b/logging/elasticsearch.yaml
@@ -31,6 +31,8 @@ spec:
     metadata:
       labels:
         app: elasticsearch
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: elasticsearch
@@ -64,7 +66,7 @@ spec:
       initContainers:
         - name: fix-permissions
           image: busybox
-          command: ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
+          command: [ "sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data" ]
           securityContext:
             privileged: true
           volumeMounts:
@@ -72,12 +74,12 @@ spec:
               mountPath: /usr/share/elasticsearch/data
         - name: increase-vm-max-map
           image: busybox
-          command: ["sysctl", "-w", "vm.max_map_count=262144"]
+          command: [ "sysctl", "-w", "vm.max_map_count=262144" ]
           securityContext:
             privileged: true
         - name: increase-fd-ulimit
           image: busybox
-          command: ["sh", "-c", "ulimit -n 65536"]
+          command: [ "sh", "-c", "ulimit -n 65536" ]
           securityContext:
             privileged: true
   volumeClaimTemplates:
