--- a/monitoring/manifests/prometheus-roleBindingSpecificNamespaces.yaml
+++ b/monitoring/manifests/prometheus-roleBindingSpecificNamespaces.yaml
@@ -69,6 +69,19 @@ items:
   kind: RoleBinding
   metadata:
     name: prometheus-k8s
+    namespace: elastic-system
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: prometheus-k8s
+  subjects:
+  - kind: ServiceAccount
+    name: prometheus-k8s
+    namespace: monitoring
+- apiVersion: rbac.authorization.k8s.io/v1
+  kind: RoleBinding
+  metadata:
+    name: prometheus-k8s
     namespace: observability
   roleRef:
     apiGroup: rbac.authorization.k8s.io
