--- a/projectcontour/kibana-httpproxy.yaml
+++ b/projectcontour/kibana-httpproxy.yaml
@@ -1,3 +1,4 @@
+---
 kind: HTTPProxy
 apiVersion: projectcontour.io/v1
 metadata:
@@ -8,4 +9,4 @@ spec:
     fqdn: kibana.ephemeral-roles.net
   includes:
     - name: kibana-httpproxy
-      namespace: logging
+      namespace: elastic-system
