--- a/monitoring/manifests/kube-state-metrics-service.yaml
+++ b/monitoring/manifests/kube-state-metrics-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: vv1.5.0
+    app.kubernetes.io/version: v1.9.5
   name: kube-state-metrics
   namespace: monitoring
 spec:
