--- a/monitoring/manifests/kube-state-metrics-serviceMonitor.yaml
+++ b/monitoring/manifests/kube-state-metrics-serviceMonitor.yaml
@@ -3,7 +3,7 @@ kind: ServiceMonitor
 metadata:
   labels:
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: v1.5.0
+    app.kubernetes.io/version: 1.9.5
   name: kube-state-metrics
   namespace: monitoring
 spec:
