--- a/monitoring/manifests/node-exporter-daemonset.yaml
+++ b/monitoring/manifests/node-exporter-daemonset.yaml
@@ -36,13 +36,11 @@ spec:
             memory: 180Mi
         volumeMounts:
         - mountPath: /host/proc
-          mountPropagation: HostToContainer
           name: proc
-          readOnly: true
+          readOnly: false
         - mountPath: /host/sys
-          mountPropagation: HostToContainer
           name: sys
-          readOnly: true
+          readOnly: false
         - mountPath: /host/root
           mountPropagation: HostToContainer
           name: root
@@ -57,7 +55,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: quay.io/brancz/kube-rbac-proxy:v0.4.1
+        image: quay.io/coreos/kube-rbac-proxy:v0.4.1
         name: kube-rbac-proxy
         ports:
         - containerPort: 9100
