--- a/monitoring/manifests/grafana-deployment.yaml
+++ b/monitoring/manifests/grafana-deployment.yaml
@@ -12,12 +12,15 @@ spec:
       app: grafana
   template:
     metadata:
+      annotations:
+        checksum/grafana-config: 557b1a2e3135b97b276d082de8422266
+        checksum/grafana-datasources: 48faab41f579fc8efde6034391496f6a
       labels:
         app: grafana
     spec:
       containers:
       - env: []
-        image: grafana/grafana:7.3.5
+        image: grafana/grafana:7.1.0
         name: grafana
         ports:
         - containerPort: 3000
@@ -121,6 +124,7 @@ spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
       securityContext:
+        fsGroup: 65534
         runAsNonRoot: true
         runAsUser: 65534
       serviceAccountName: grafana
