Update Grafana dashboard

--- a/monitoring/manifests/grafana-dashboardDefinitions.yaml
+++ b/monitoring/manifests/grafana-dashboardDefinitions.yaml
@@ -4773,7 +4773,6 @@ items:
                   "type": "row"
               },
               {
-                  "content": "<br/>\n<center>\n  <a href=\"https://github.com/ewohltman/ephemeral-roles\"><img src=\"https://github.com/ewohltman/ephemeral-roles/raw/master/web/static/Testa_Anatomica-Filippo_Balbi.jpg\" width=\"50\"></a>\n  &nbsp\n  <a href=\"https://github.com/ewohltman/ephemeral-roles\">ephemeral-roles</a>\n</center>",
                   "datasource": null,
                   "fieldConfig": {
                       "defaults": {
@@ -4795,12 +4794,11 @@ items:
                   "links": [
 
                   ],
-                  "mode": "html",
                   "options": {
                       "content": "<br/>\n<center>\n  <a href=\"https://github.com/ewohltman/ephemeral-roles\"><img src=\"https://github.com/ewohltman/ephemeral-roles/raw/master/web/static/Testa_Anatomica-Filippo_Balbi.jpg\" width=\"50\"></a>\n  &nbsp\n  <a href=\"https://github.com/ewohltman/ephemeral-roles\">ephemeral-roles</a>\n</center>",
                       "mode": "html"
                   },
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "title": "",
                   "type": "text"
               },
@@ -4850,8 +4848,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -4986,8 +4987,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5101,7 +5105,7 @@ items:
                       },
                       "showUnfilled": true
                   },
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "targets": [
                       {
                           "expr": "label_replace(ephemeral_roles_guilds_count{pod=~\"ephemeral-roles-.+\"}, \"instance\", \"\", \"instance\", \".+\")",
@@ -5163,8 +5167,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5277,7 +5284,7 @@ items:
                       },
                       "showUnfilled": true
                   },
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "targets": [
                       {
                           "expr": "label_replace(ephemeral_roles_members_count{pod=~\"ephemeral-roles-.+\"}, \"instance\", \"\", \"instance\", \".+\")",
@@ -5353,8 +5360,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5471,8 +5481,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5609,8 +5622,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5741,8 +5757,11 @@ items:
 
                   ],
                   "nullPointMode": "null",
+                  "options": {
+                      "alertThreshold": true
+                  },
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5873,7 +5892,7 @@ items:
                   ],
                   "nullPointMode": "null",
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -5995,7 +6014,7 @@ items:
                   ],
                   "nullPointMode": "null",
                   "percentage": false,
-                  "pluginVersion": "7.1.0",
+                  "pluginVersion": "7.3.5",
                   "pointradius": 5,
                   "points": false,
                   "renderer": "flot",
@@ -6088,7 +6107,7 @@ items:
               ]
           },
           "time": {
-              "from": "now-5m",
+              "from": "now-24h",
               "to": "now"
           },
           "timepicker": {
@@ -6119,7 +6138,7 @@ items:
           "timezone": "",
           "title": "Ephemeral Roles Metrics",
           "uid": "OqANQqtiz",
-          "version": 2
+          "version": 1
       }
   kind: ConfigMap
   metadata:
